[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
bincode = "1.3.3"
