[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-crypto-internal-threshold-sig-bls12381 = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-internal-bls12381-common = { git ="https://github.com/dfinity/ic.git" }
clap = { version = "3.1.2", features = ["derive"] }
bls12_381 = { version = "0.5.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
serde = "1.0.136"
serde_bytes = "0.11.5"
group = "0.10.0"
rand = "0.7.3"
